--- a/pages/admin/components/violations.html
+++ b/pages/admin/components/violations.html
@@ -74,7 +74,7 @@
         <th scope="col" style="background-color: #f4f4f9">Name</th>
         <th scope="col" style="background-color: #f4f4f9">Business</th>
         <th scope="col" style="background-color: #f4f4f9">Business ID</th>
-        <th scope="col" style="background-color: #f4f4f9">Business Type</th>
+        <th scope="col" style="background-color: #f4f4f9">Business Status</th>
         <th scope="col" style="background-color: #f4f4f9">Type of Violation</th>
         <th scope="col" style="background-color: #f4f4f9">Date Issued</th>
         <th scope="col" style="background-color: #f4f4f9">Due Date</th>
@@ -85,7 +85,7 @@
         <td>John Doe</td>
         <td>Doe Enterprises</td>
         <td>12345</td>
-        <td>Retail</td>
+        <td>low Income</td>
         <td>Late Payment</td>
         <td>2023-01-15</td>
         <td>2023-02-15</td>
@@ -94,7 +94,7 @@
         <td>Jane Smith</td>
         <td>Smith & Co.</td>
         <td>67890</td>
-        <td>Wholesale</td>
+        <td>Still operating</td>
         <td>Unlicensed Operation</td>
         <td>2023-02-01</td>
         <td>2023-03-01</td>
@@ -103,7 +103,7 @@
         <td>Bob Johnson</td>
         <td>Johnson Services</td>
         <td>11223</td>
-        <td>Service</td>
+        <td>With Permit</td>
         <td>Health Code Violation</td>
         <td>2023-03-10</td>
         <td>2023-04-10</td>
