update: 🔨 modified violations html -> inspections html + added buisness inspections table

--- a/pages/admin/components/dashboard.html
+++ b/pages/admin/components/dashboard.html
@@ -44,9 +44,23 @@
   </div>
   <div class="row mt-4">
    <div class="col-md-4 col-xl-3">
-    <div class="card bg-c-blue order-card">
+    <div class="card bg-c-pink order-card">
      <div class="card-block">
       <h6 class="m-b-20">Total Violators</h6>
+      <div class="d-flex align-items-center gap-2">
+       <h2 class="text-right">
+        <i class="fa fa-users f-left text-white"></i>
+       </h2>
+       <h2>486</h2>
+      </div>
+      <p class="mt-5">Resolved Violations: <span class="f-right">351</span></p>
+     </div>
+    </div>
+   </div>
+   <div class="col-md-4 col-xl-3">
+    <div class="card bg-c-blue order-card">
+     <div class="card-block">
+      <h6 class="m-b-20">Total Inspections</h6>
       <div class="d-flex align-items-center gap-2">
        <h2 class="text-right">
         <i class="fa fa-users f-left text-white"></i>
