--- a/pages/admin/components/header.html
+++ b/pages/admin/components/header.html
@@ -14,7 +14,7 @@
   />
   <style>
    .header {
-    background-color: #f8f9fa;
+    background-color: white;
     padding: 10px 16px;
     border-radius: 8px;
     display: flex;
@@ -50,7 +50,7 @@
   </style>
  </head>
  <body id="header">
-  <div class="header">
+  <div class="header m-3">
    <div class="profile">
     <img src="/assets/admin_prof.png" alt="Profile Picture" />
     <span class="name">John Doe</span>
