--- a/pages/admin/components/inspections.html
+++ b/pages/admin/components/inspections.html
@@ -17,7 +17,7 @@
   <style>
    body {
     font-family: "Poppins", Arial, sans-serif !important;
-    background-color: #f4f4f9;
+    background-color: #eff3fc;
     margin: 0;
     padding: 0;
    }
@@ -59,11 +59,54 @@
   <section class="">
    <div class="card">
     <div class="card-body">
-     <h4>Violations</h4>
-     <p>List of violations will be displayed here.</p>
+     <h4>Business Inspections</h4>
+     <p>Inspect business and create violations for business violators</p>
     </div>
    </div>
   </section>
+  <div class="mt-3">
+   <section class="card mt-3">
+    <div class="card-body">
+     <h4>Inspected Businesses</h4>
+     <table class="table">
+      <thead>
+       <tr>
+        <th scope="col" style="background-color: #f4f4f9">Business ID</th>
+        <th scope="col" style="background-color: #f4f4f9">Inspector ID</th>
+        <th scope="col" style="background-color: #f4f4f9">Inspection Date</th>
+        <th scope="col" style="background-color: #f4f4f9">
+         Type of Inspection
+        </th>
+        <th scope="col" style="background-color: #f4f4f9">With Violations</th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+        <td>12345</td>
+        <td>1</td>
+        <td>2023-01-10</td>
+        <td>Regular</td>
+        <td>Yes</td>
+       </tr>
+       <tr>
+        <td>67890</td>
+        <td>2</td>
+        <td>2023-02-05</td>
+        <td>Night</td>
+        <td>No</td>
+       </tr>
+       <tr>
+        <td>11223</td>
+        <td>3</td>
+        <td>2023-03-15</td>
+        <td>Special (Verification)</td>
+        <td>Yes</td>
+       </tr>
+      </tbody>
+     </table>
+    </div>
+   </section>
+  </div>
   <div class="mt-3">
    <section class="card">
     <div class="card-body">
