--- a/pages/admin/components/inspector.html
+++ b/pages/admin/components/inspector.html
@@ -17,7 +17,7 @@
   <style>
    body {
     font-family: "Poppins", sans-serif !important;
-    background-color: #f0f2f5;
+    background-color: #eff3fc;
    }
    .container {
     max-width: 900px;
