--- a/pages/inspector/components/dashboard.html
+++ b/pages/inspector/components/dashboard.html
@@ -46,7 +46,7 @@
    <div class="col-md-4 col-xl-3">
     <div class="card bg-c-blue order-card">
      <div class="card-block">
-      <h6 class="m-b-20">Total Violators</h6>
+      <h6 class="m-b-20">Total Inspections</h6>
       <div class="d-flex align-items-center gap-2">
        <h2 class="text-right">
         <i class="fa fa-users f-left text-white"></i>
@@ -83,7 +83,7 @@
        </h2>
        <h2>120</h2>
       </div>
-      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
+      <p class="mt-5">Total Inspections: <span class="f-right">486</span></p>
      </div>
     </div>
    </div>
@@ -91,7 +91,7 @@
    <div class="col-md-4 col-xl-3">
     <div class="card bg-c-pink order-card">
      <div class="card-block">
-      <h6 class="m-b-20">Number of Inspectors</h6>
+      <h6 class="m-b-20">Total Violators</h6>
       <div class="d-flex align-items-center gap-2">
        <h2 class="text-right">
         <i class="fa fa-user-tie text-white"></i>
