--- a/pages/admin/components/inspector.html
+++ b/pages/admin/components/inspector.html
@@ -188,7 +188,9 @@
    </div>
   </div>
 
-  <script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- script for adding new inspectors -->
+  <script type="module">
    document.addEventListener("DOMContentLoaded", function () {
     const addInspectorForm = document.getElementById("addInspectorForm");
     const inspectorList = document.getElementById("inspectorList");
@@ -234,6 +236,21 @@
     });
    });
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- script for rendering all inspectors -->
+  <script type="module">
+   // list of inspectors
+   import CONFIG from "/scripts/config.js";
+   const apiUrl = CONFIG.API_BASE_URL;
+
+   const res = await fetch(apiUrl + "/inspectors", {
+    method: "GET",
+    headers: {
+     Accept: "application/json",
+     "Content-Type": "application/json",
+     Authorization: `Bearer ${localStorage.getItem("token")}`,
+    },
+   });
+  </script>
  </body>
 </html>
